# social-kinesphere

./: .gitignore  README.md  projections.py  pyproject.toml  send_osc.py  start.sh
arduino/void1_double/: void1_double.ino
arduino/void2_double/: void2_double.ino
arduino/void3_single/: void3_single.ino
arduino/void4_single/: void4_single.ino
init/: enable.sh  setup.sh  void1.service  void2.service  void3.service  void4.service
projections/: projections.pde
