[tool.poetry]
name = "social-kinesphere"
version = "0.1.0"
description = ""
authors = ["Darwin Do <darwin78913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"
python-osc = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
